Add query paramater filters to project location endpoint